MODIFY：笔记、笔记本增删功能

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,7 +9,7 @@
     </ul>
     <ul class="layui-nav layui-layout-right">
         <li class="layui-nav-item">
-            <a href="javascript:;">CharlesFeng</a>
+            <a id="cur_user" href="javascript:;">CharlesFeng</a>
             <dl class="layui-nav-child">
                 <dd><a href="javascript:;">修改密码</a></dd>
                 <dd><a href="javascript:;">退出登录</a></dd>
