--- a/public/stylesheets/note.css
+++ b/public/stylesheets/note.css
@@ -36,13 +36,17 @@
     margin-left: -9px;
 }
 
-.brief_share_delete_btn_group_tip {
+.btn_group_tip {
     margin-top: -5px;
     color: #BDC0BA;
 }
 
 .brief_separator {
     margin-top: 29px;
+}
+
+.note_item {
+    padding-top: 7px;
 }
 
 .note_title_icon {
@@ -71,11 +75,29 @@
 }
 
 .note_div {
-    opacity: 0.9;
-    height: 580px;
+    opacity: 1;
+    height: 555px;
 
-    margin-top: 40px;
+    /*margin-top: 40px;*/
     margin-left: 10px;
     margin-right: 10px;
-;
+}
+
+.note_save_discard_btn_group {
+    text-align: right;
+    padding-right: 10px;
+    margin-top: -3px;
+}
+
+.note_separator {
+    margin-top: 55px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+/* 整个笔记黑色区域内部布局 */
+.note_area {
+    padding: 10px;
+    width: 100%;
+    height: 100%;
 }
