MODIFY：将笔记的编辑区域提为公有

--- a/public/stylesheets/note.css
+++ b/public/stylesheets/note.css
@@ -4,7 +4,7 @@
 
 .brief_note {
     padding: 7px;
-    border: 3px solid #159587;
+    border: 3px solid #BDC0BA;
     height: 20%;
 }
 
@@ -60,16 +60,17 @@
     margin-left: 2px;
 }
 
-.note_title {
+/* 笔记提示项的字 */
+.note_item_word {
     font-size: 17px;
     color: #BDC0BA;
     border-color: rgba(0, 0, 0, 0);
     background: rgba(0, 0, 0, 0);
     margin-top: 2px;
-
+    width: 100%;
 }
 
-/*输入框的默认颜色*/
+/* 输入框的默认颜色 */
 ::-webkit-input-placeholder { /* WebKit browsers */
     color: #787b75;
 }
