--- a/views/note_area.ejs
+++ b/views/note_area.ejs
@@ -1,11 +1,25 @@
 <div class="note_area">
+    <% if(typeof note_data != 'undefined' && note_data.length > 0) { %>
+    </p>
+    <p class="note_id2" style="display: none">
+        <% note_data[0].tag %>
+    </p>
+    <% } else { %>
+    <p class="note_id" style="display: none">-1</p>
+    <% } %>
+
     <!--  笔记名字 -->
     <div class="layui-col-xs4 note_item">
         <label class="layui-col-xs1 note_title_icon">
             <i class="layui-icon">&#xe617;</i>
         </label>
         <div class="layui-col-xs10 note_title_outer">
+            <% if(typeof note_data != 'undefined' && note_data.length > 0) { %>
+            <input id="note_name_input" type="text" class=" note_item_word" placeholder="您的笔记名称"
+                   value="<% note_data[0].nb_name %>">
+            <% } else { %>
             <input id="note_name_input" type="text" class=" note_item_word" placeholder="您的笔记名称">
+            <% } %>
         </div>
     </div>
 
@@ -15,7 +29,13 @@
             <i class="layui-icon">&#xe622;</i>
         </label>
         <div class='layui-col-xs10 note_title_outer'>
-            <p class="note_item_word">您的笔记本</p>
+            <p class="note_nb note_item_word">
+                <% if(typeof note_data != 'undefined' && note_data.length > 0) { %>
+                <% note_data[0].nb_name %>
+                <% } else { %>
+                您的笔记本
+                <% } %>
+            </p>
         </div>
     </div>
 
@@ -25,7 +45,12 @@
             <i class="layui-icon">&#xe64c;</i>
         </label>
         <div class="layui-col-xs10 note_title_outer">
+            <% if(typeof note_data != 'undefined' && note_data.length > 0) { %>
+            <input id="note_tag_input" type="text" class="note_item_word" placeholder="默认无标签"
+                   value="<% note_data[0].tag %>">
+            <% } else { %>
             <input id="note_tag_input" type="text" class="note_item_word" placeholder="默认无标签">
+            <% } %>
         </div>
     </div>
 
