--- a/public/stylesheets/note.css
+++ b/public/stylesheets/note.css
@@ -62,12 +62,12 @@
 
 /* 笔记提示项的字 */
 .note_item_word {
+    width: 200px;
     font-size: 17px;
     color: #BDC0BA;
     border-color: rgba(0, 0, 0, 0);
     background: rgba(0, 0, 0, 0);
-    margin-top: 2px;
-    width: 100%;
+    margin-top: 3px;
 }
 
 /* 输入框的默认颜色 */
