--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Marvel Note</title>
     <link rel="stylesheet" href="/layui/css/layui.css">
+    <link rel="stylesheet" href="/stylesheets/notebooks.css">
     <link rel="stylesheet" href="/stylesheets/note.css">
     <style>
         body {
