--- a/views/note_area.ejs
+++ b/views/note_area.ejs
@@ -3,39 +3,47 @@
 <div class="note_area">
     <% if(typeof note_data != 'undefined' && note_data.length > 0) { %>
     <p class="note_id" style="display: none"><%= note_data[0].note_id %></p>
+    <p class="nb_id" style="display: none"><%= note_data[0].nb_id %></p>
     <% } else { %>
     <p class="note_id" style="display: none">-1</p>
+    <p class="nb_id" style="display: none">-1</p>
     <% } %>
 
     <!--  笔记名字 -->
-    <div class="layui-col-xs4 note_item">
+    <div class="layui-col-xs3 note_item">
         <label class="layui-col-xs1 note_title_icon">
             <i class="layui-icon">&#xe617;</i>
         </label>
         <div class="layui-col-xs10 note_title_outer">
             <% if(typeof note_data != 'undefined' && note_data.length > 0) { %>
-            <input id="note_name_input" type="text" class=" note_item_word" placeholder="您的笔记名称"
+            <input id="note_name_input" type="text" maxlength="11" class=" note_item_word" placeholder="您的笔记名称"
                    value="<%= note_data[0].note_name %>">
             <% } else { %>
-            <input id="note_name_input" type="text" class=" note_item_word" placeholder="您的笔记名称">
+            <input id="note_name_input" type="text" maxlength="11" class=" note_item_word" placeholder="您的笔记名称">
             <% } %>
         </div>
     </div>
 
     <!-- 所属笔记本 -->
-    <div class="layui-col-xs3 note_item">
+    <div class="layui-col-xs4 note_item">
         <label class="layui-col-xs1 note_title_icon">
             <i class="layui-icon">&#xe622;</i>
         </label>
-        <div class='layui-col-xs10 note_title_outer'>
-            <p class="note_nb note_item_word">
+        <div class='layui-col-xs6 note_title_outer'>
+            <div id="note_nb" class="note_item_word">
                 <% if(typeof note_data != 'undefined' && note_data.length > 0) { %>
                 <%= note_data[0].nb_name %>
                 <% } else { %>
                 您的笔记本
                 <% } %>
-            </p>
+            </div>
         </div>
+        <label id="change_nb" class="layui-col-xs1 note_title_icon">
+            <i class="layui-icon">&#xe671;</i>
+        </label>
+        <!--<button class="layui-col-xs-offset1 layui-col-xs1 layui-btn layui-btn-sm layui-btn-warm">-->
+            <!--<i class="layui-icon">&#xe671;</i>-->
+        <!--</button>-->
     </div>
 
     <!-- 所属标签 -->
