--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Marvel Note</title>
     <link rel="stylesheet" href="/layui/css/layui.css">
+    <link rel="stylesheet" href="/stylesheets/notebooks.css">
     <link rel="stylesheet" href="/stylesheets/note.css">
     <style>
         body {
@@ -113,7 +114,7 @@
             // 动态修改当前样式，因为却是耽搁元素，所以直接取以数组形式返回的结果的第一个
             $('.note_area').find('.note_id').html(cur_note_id);
             $('.note_area').find('#note_name_input').val(result[0].note_name);
-            $('.note_area').find('.note_nb').html(result[0].nb_name);
+            $('.note_area').find('#note_nb').html(result[0].nb_name);
             $('.note_area').find('#note_tag_input').val(result[0].tag);
             $('.note_area').find('.mynote').html(result[0].content);
           },
