--- a/views/note_area.ejs
+++ b/views/note_area.ejs
@@ -1,7 +1,7 @@
 <!--根据当前第一个笔记条目（若存在）修改实际笔记区域-->
 
 <div class="note_area">
-    <% if(typeof note_data != 'undefined' && note_data.length > 0) { %>
+    <% if(has_note === true) { %>
     <p class="note_id" style="display: none"><%= note_data[0].note_id %></p>
     <p class="nb_id" style="display: none"><%= note_data[0].nb_id %></p>
     <% } else { %>
@@ -15,7 +15,7 @@
             <i class="layui-icon">&#xe617;</i>
         </label>
         <div class="layui-col-xs10 note_title_outer">
-            <% if(typeof note_data != 'undefined' && note_data.length > 0) { %>
+            <% if(has_note === true) { %>
             <input id="note_name_input" type="text" maxlength="11" class=" note_item_word" placeholder="您的笔记名称"
                    value="<%= note_data[0].note_name %>">
             <% } else { %>
@@ -31,10 +31,10 @@
         </label>
         <div class='layui-col-xs6 note_title_outer'>
             <div id="note_nb" class="note_item_word">
-                <% if(typeof note_data != 'undefined' && note_data.length > 0) { %>
+                <% if(has_note === true) { %>
                 <%= note_data[0].nb_name %>
                 <% } else { %>
-                您的笔记本
+                <%= default_nb[0].nb_name %>
                 <% } %>
             </div>
         </div>
@@ -52,7 +52,7 @@
             <i class="layui-icon">&#xe64c;</i>
         </label>
         <div class="layui-col-xs10 note_title_outer">
-            <% if(typeof note_data != 'undefined' && note_data.length > 0) { %>
+            <% if(has_note === true) { %>
             <input id="note_tag_input" type="text" class="note_item_word" placeholder="默认无标签"
                    value="<%= note_data[0].tag %>">
             <% } else { %>
@@ -78,7 +78,7 @@
     <!-- summer_note -->
     <div class="note_div">
         <div class="summernote mynote" style="z-index: 1000; color: #BDC0BA">
-            <% if(typeof note_data != 'undefined' && note_data.length > 0) { %>
+            <% if(has_note === true) { %>
             <%= note_data[0].content %>
             <% } %>
         </div>
